Devel rnaseq umi (#25)
* Updates to workflows and protocols